openapi ready, project almost finished
